fix: added the 'cencel' button function

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
     </div>
     <div class="input-box">
-      <div class="operator">C</div>
+      <div class="operator" onclick="clearAll()">C</div>
       <div class="operator">+/-</div>
       <div class="operator"><i class="fas fa-percentage"></i></div>
       <div class="operator" onclick="operator('/')"><i class="fas fa-divide"></i></div>
@@ -54,7 +54,7 @@
 
       <div class="operand" onclick="operand(0)">0</div>
       <div class="operand">.</div>
-      <div class="operator"><i class="fas fa-backspace"></i></div>
+      <div class="operator" onclick="backSpace()"><i class="fas fa-backspace"></i></div>
       <div class="operator" onclick="equal()"><i class="fas fa-equals"></i></div>
     </div>
   </div>
